[package]
name = "failed-build-rustc-ap-rustc_session-633"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rustc_session]
package = "rustc-ap-rustc_session"
version = "633.0.0"